[package]
name = "cli-lz-explorer"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy Boetticher <jeremy.boetticher@purestake.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
clap_mangen = "0.2.6"
owo-colors = "3.5.0"
prettytable-rs = "0.10.0"
serde_json = "1.0.91"