[package]
name = "cli-lz-explorer"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy Boetticher <jeremy.boetticher@purestake.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
clap_mangen = "0.2.6"
unicode-truncate = "0.2.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = {version = "0.11", features = ["json"]}